fixed overflow background color with html tag property

--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -1,5 +1,9 @@
 /* -------- CONTACT PAGE----------*/
 
+html {
+  background-color: var(--L-grey);
+}
+
 :root{
   --D-BLUE: #07335D;
   --M-BLUE: #2699FB;
@@ -35,6 +39,13 @@
   margin: 5%;
   padding: 1em;
   background-color: var(--L-grey);
+  overflow: visible;
+}
+
+.#form div{
+  background-color: var(--L-grey);
+  background-size: cover;
+  
 }
 
 .form input {
